[package]
name = "tokio_test"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt = "0.16.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
mini-redis = "0.4.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
hmac = "0.12.1"
sha2 = "0.10.8"
